text/grammar-v1.txt
Start := StatementList EOF

STATEMENT_LIST := STATEMENT STATEMENT_LIST | STATEMENT

WHILE:= while (EXPRESSION) STATEMENT

IF:= if(EXPRESSION) STATEMENT else STATEMENT

STATEMENT := WHILE | { STATEMNT_LIST } | DECLARE | ASSIGNMENT | PRINT | IF

DECLARE := var IDENTIFER = EXPRESSION; | var IDENTIFER;

ASSIGNMENT := IDENTIFER = EXPRESSSION;

PRINT := print EXPRESSION;

---------------- arithmetic ----------------

EXPRESSION := THERME | EXPRESSION + THERME | EXPRESSION - THERME 

THERME := FACTOR | THERME * FACTOR | THERME / FACTOR

FACTOR := NUMBER | IDENTIFER | -FACTOR | (EXPRESSION) | IS_NEG

IS_NEG:= isNeg(EXPRESSION)
